--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,10 @@ span {
   @apply container;
 }
 
+.layout {
+  @apply flex flex-col min-h-screen;
+}
+
 .menu__lines::before,
 .menu__lines::after {
   content: '';
@@ -52,7 +56,7 @@ span {
   height: 13px;
 }
 .search {
-  width: 30px;
+  width: 20px;
   height: auto;
 }
 
